Starting a test to solve the problem with cdk and scroll on mobiles.

--- a/src/app/task/task/task.component.scss
+++ b/src/app/task/task/task.component.scss
@@ -7,6 +7,7 @@ li.task-item {
     padding: 15px 0px;
     cursor: pointer;
     color: var(--text-color);
+    touch-action: none;
 }
 
 li.task-item:hover {
